<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="horizontal" >
    
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row1_pfx"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/RowOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/default_val"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row2_pfx"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/RowTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/default_val"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />
    </TableRow>    

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row3_pfx"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/RowThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/default_val"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row4_pfx"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/RowFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/default_val"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row5_pfx"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/RowFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/default_val"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row6_pfx"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/RowSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/default_val"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />
    </TableRow>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="insertTable"
        android:text="@string/button1_pfx" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clearAll"
        android:text="@string/button2_pfx" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="dropTable"
        android:text="@string/button_droptable_pfx" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createTable"
        android:text="@string/button_createtable" />

</TableLayout>